chore(cleanup): remove unused data folder and temp file; update README; add gitignore

--- a/java-app/src/main/resources/templates/base.html
+++ b/java-app/src/main/resources/templates/base.html
@@ -58,9 +58,9 @@
                 </div>
                 <div class="footer-contact">
                     <h4>Contacto</h4>
-                    <p><i class="fas fa-phone"></i> +57 300 123 4567</p>
-                    <p><i class="fas fa-envelope"></i> contacto@animalcare.com</p>
-                    <p><i class="fas fa-map-marker-alt"></i> Av. Central 123</p>
+                    <p><i class="fas fa-phone"></i> +57 323 314 7621<p>
+                    <p><i class="fas fa-envelope"></i> john.ceballosbel@campusucc.edu.co<p>
+                    <p><i class="fas fa-map-marker-alt"></i> Universidad Cooperativa de Colombia<p>
                 </div>
             </div>
             <div class="footer-bottom">
